fix uneven columns

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,6 @@
     padding: 20px;
     margin: 10px 5px;
     display: inline-block;
-    float: left;
     -webkit-column-break-inside: avoid;
     -moz-column-break-inside: avoid;
     break-inside: avoid;
